Not working. Adding user input to choose day number. Does use day number to find the lesson of words.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -16,6 +16,7 @@ span {
   font-family: Helvetica;
   color: black;
   font-size: 9rem;
+  text-shadow: 2px 2px gray;
 }
 .directions {
 margin: auto;
