--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -238,7 +238,17 @@ h3 {
 #story17,
 #story18,
 #story19,
-#story20  {
+#story20,
+#story21,
+#story22,
+#story23,
+#story24,
+#story25,
+#story26,
+#story27,
+#story28,
+#story29,
+#story30,  {
   display: none;
 }
 
