--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -120,6 +120,7 @@ button:hover {
   border: 8px solid #e60000;
   border-radius: 2px;
   position: relative;
+    margin-bottom: 100px;
 }
 
 #closeDirections {
@@ -248,12 +249,17 @@ h3 {
 #story27,
 #story28,
 #story29,
-#story30 {
+#story30,
+#story31,
+#story32,
+#story33,
+#story34,
+#story35 {
   display: none;
 }
 
 .stories img {
-  width: 75%;
+  width: 65%;
   height: auto;
 }
 
@@ -322,6 +328,11 @@ h2 {
      display: block;
    }
 
+   .stories img {
+     width: 90%;
+     height: auto;
+   }
+
 /*30% of viewport width*/
    span {
      font-size: 30vw;
@@ -341,6 +352,11 @@ h2 {
       span {
         font-size: 25vw;
       }
+
+      .stories img {
+        width: 90%;
+        height: auto;
+      }
   }
 
 
@@ -359,7 +375,7 @@ h2 {
    }
 
    .stories img {
-     width: 90%;
+     width: 80%;
      height: auto;
    }
 }
