--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -312,9 +312,15 @@ h2 {
    button {
      font-size: .8rem;
      border-radius: 2px;
-     padding: .5rem .5rem;
-     margin: .1rem .1rem;
+     padding: .5rem;
+     margin: .1rem;
    }
+
+.choose,
+li {
+  padding: .5rem;
+  margin: .4rem;
+}
 
    .long {
      display: none;
@@ -357,6 +363,13 @@ h2 {
         width: 90%;
         height: auto;
       }
+
+      .choose,
+      li {
+        padding: .4rem;
+        margin: .3rem;
+      }
+
   }
 
 
@@ -372,6 +385,12 @@ h2 {
      font-size: .9rem;
      padding: .5rem .5rem;
      margin: 0 .5rem;
+   }
+
+   .choose,
+   li {
+     padding: .3rem;
+     margin: .3rem;
    }
 
    .stories img {
