--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -38,16 +38,22 @@ span {
 /*Header and logo are the EP banner*/
 header {
   margin-bottom: .5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: nowrap;
-  align-items: center;
-  justify-content: center;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .logo {
   width: 50%;
   height: auto;
-  /*margin: auto;*/
   overflow: hidden;
   padding: 0;
 }
@@ -56,6 +62,7 @@ header {
   width: 100%;
   height: auto;
   padding: 0;
+  margin-bottom: 1rem;
 }
 
 .small {
@@ -63,6 +70,7 @@ header {
   width: 50%;
   height: auto;
   margin: 0 auto;
+  margin-bottom: .8rem;
   padding: 0;
 }
 
@@ -71,6 +79,7 @@ header {
   width: 80%;
   height: auto;
   margin: 0 auto;
+  margin-bottom: .6rem;
   padding: 0;
 }
 
@@ -97,15 +106,24 @@ button:hover {
 
 #readButton {
   display: none;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   padding: .5rem;
   margin: 0 auto;
 }
 
 .afterReading {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .readToMe,
@@ -135,7 +153,9 @@ button:hover {
   text-align: center;
   background-color: #e60000;
   border-radius: 2px;
-  transition-duration: 300ms;
+  -webkit-transition-duration: 300ms;
+       -o-transition-duration: 300ms;
+          transition-duration: 300ms;
 }
 
 #closeDirections:hover {
@@ -192,20 +212,37 @@ button:hover {
 }
 
 #lessonList {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   z-index: 10;
   margin: 1rem 0;
 }
 
 /*story text*/
 .stories {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-content: center;
-  justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 h3 {
@@ -319,6 +356,7 @@ h2 {
   -ms-flex-pack: distribute;
       justify-content: space-around;
   -webkit-transition: all 250ms ease-in-out;
+  -o-transition: all 250ms ease-in-out;
   transition: all 250ms ease-in-out;
   margin: auto;
   color: black;
@@ -330,9 +368,13 @@ h2 {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-            align-items: center;
+            -webkit-box-align: center;
+                -ms-flex-align: center;
+                    align-items: center;
             text-align: center;
-            justify-content: center;
+            -webkit-box-pack: center;
+                -ms-flex-pack: center;
+                    justify-content: center;
   }
 
   .stories p {
@@ -346,6 +388,7 @@ h2 {
      border-radius: 2px;
      padding: .5rem;
      margin: .1rem;
+     width: 150px;
    }
 
 .choose,
@@ -372,8 +415,13 @@ li {
    }
 
    .afterReading {
+     display: -webkit-box;
+     display: -ms-flexbox;
      display: flex;
-     flex-direction: column;
+     -webkit-box-orient: vertical;
+     -webkit-box-direction: normal;
+         -ms-flex-direction: column;
+             flex-direction: column;
      margin: 0 auto;
    }
 
