Git rid of outside links.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -165,15 +165,19 @@ button:hover {
 /*check mark*/
 .check {
   margin: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 #yes {
   cursor: pointer;
   display: none;
-}
-
-.check i {
-  padding: 1rem;
+  width: 40%;
+  height:40%
 }
 
 .column {
